deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rodsmutator
  labels:
    app: rodsmutator
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 8443
      targetPort: 8443
  selector:
    app: rodsmutator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rodsmutator
  labels:
    app: rodsmutator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rodsmutator
  template:
    metadata:
      name: rodsmutator
      labels:
        app: rodsmutator
    spec:
      containers:
        - name: mutator
          image: rodalbuquerque/mutating-webhook:0.22
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: rodsmutator
  labels:
    app: rodsmutator
webhooks:
  - name: rodsmutator.mutatingwebhook.svc.cluster.local
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZFRENDQXZpZ0F3SUJBZ0lVTVJtbktvUjYrVG9Vd0xqNFZwSnI4WFkzWEo0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tqRW9NQ1lHQTFVRUF3d2ZjbTlrYzIxMWRHRjBiM0l1YlhWMFlYUnBibWQzWldKb2IyOXJMbk4yWXpBZQpGdzB5TXpBNE1EWXlNVFU0TkRoYUZ3MHlOREE0TURVeU1UVTRORGhhTUNveEtEQW1CZ05WQkFNTUgzSnZaSE50CmRYUmhkRzl5TG0xMWRHRjBhVzVuZDJWaWFHOXZheTV6ZG1Nd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUMKRHdBd2dnSUtBb0lDQVFEVmY1RTJCSkhaa0s0S0ZzNGdoRXFCY2FEK3MzTlB3TlJ4dnJYbytGa2l2eTFIRm9zcAo0Y1dsMFlxSTV [...]
      service:
        name: rodsmutator
        namespace: mutatingwebhook
        path: "/rodsmutator"
        port: 8443
    rules:
      - operations: ["CREATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["ingresses"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
